tests/sources/invalid/classes/instance_method_arg_errors.fire
// Instance-method call argument-count and argument-type mismatches.
class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }

    fn add(a: int32) -> int32 {
        return this.v + a;
    }
}

fn wrongCount() -> int32 {
    f: Foo = Foo(1);
    x: int32 = f.add();  //~ ERROR FS-SEM-0010 @18
    return x;
}

fn main() -> int32 {
    f: Foo = Foo(1);
    y: int32 = f.add(true);  //~ ERROR FS-SEM-0010 @22
    return y;
}
